@@ -86,6 +86,8 @@ Cacti CHANGELOG
 -feature: Adding multiple poller process support
 -feature: Adding the site object for devices and plugins
 -feature: Make reindexing and repopulating the poller cache a lossless process, reduce time to index by 66%
+-feature: Add logging to the script server in case of a script crash to aid in debugging
+-feature: Add common warning messages to Plugin Management page
 
 0.8.7d
 -bug#0001336: Allow to specify on_change handler for checkbox_group
